# nutc2504lab_hw

./: README.md  color.css  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
CW/01/: .gitignore  README.md  pyproject.toml
CW/01/src/day5_cw1/: config.py  logger.py  main.py
CW/01/src/day5_cw1/utils/: __init__.py  embed.py
CW/02/: .env.example  README.md  pyproject.toml
CW/02/src/day5_cw2/: config.py  main.py  model.py
CW/02/src/day5_cw2/prompts/: table_summary.jinja2
CW/02/src/day5_cw2/utils/: __init__.py  embed.py  markdown_to_csv.py  text_from_file.py
HW/day2/: README.md  env.md  main.py  pyproject.toml
HW/day2/prompts/: instagram.py  linkedin.py
HW/day3/: .gitignore  README.md  env.md  graph.py  main.py  model.py  pyproject.toml  state.py
HW/day3/nodes/: asr.py  minutes_taker.py  summarizer.py  writer.py
HW/day4/: .env.example  .gitignore  README.md  pyproject.toml
HW/day4/src/day4/: config.py  graph.py  main.py  state.py
HW/day4/src/day4/nodes/: __init__.py  check_cache.py  final_answer.py  planner.py  query_gen.py  search_tool.py
HW/day4/src/day4/prompts/: final_answer.jinja2  planner.jinja2  query_gen.jinja2  search_tool.jinja2
HW/day4/src/day4/utils/: __init__.py  cache.py  clear_tokens.py  search_searxng.py
HW/day5/: .env.example  1111032044_RAG_HW_01.csv  1111032044_RAG_HW_01.md  1111032044_RAG_HW_01.py  README.md
