[project]
name = "day5-cw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oporu", email = "70465701+Oporu@users.noreply.github.com" }
]
requires-python = "==3.11.14"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "qdrant-client>=1.16.2",
    "semantic-text-splitter>=0.29.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
day5-cw2 = "day5_cw2:main"

[tool.uv.build-backend]
module-root = "src"
module-name = "day5_cw2"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
